# Pizza-CustomerService-Agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  RESTAURANT-SETUP.md  app.py  launch.py  main.py  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: Dockerfile
.github/workflows/: deploy.yml
api/: __init__.py  main.py  models.py
docker/: Dockerfile.api  Dockerfile.streamlit  docker-compose.prod.yml  docker-compose.yml  nginx.conf  test-docker.sh
docs/: 1_microsoft-foundry.md  ARCHITECTURE.md  DOCKER-QUICKREF.md  DOCKER.md  QUICKSTART.md  RESTAURANT-GUIDE.md  UI-DESIGN-PROMPT.md  dev-environment.md
docs/.vitepress/: config.mts
docs/pt/: 6_add-mcp.md  pizza-mcp.md
examples/: demo.py
frontend/: about.html  checkout.html  deals.html  index.html  locations.html  menu.html
frontend/css/: style.css
frontend/js/: checkout.js  script.js
knowledge/: pizza_menu.md  policies_faq.md  store_locations.md
pizza_agent/: __init__.py  config.py
pizza_agent/agents/: __init__.py  api_agent.py
pizza_agent/tools/: __init__.py  order_management.py
scripts/: quickstart.py
src/pizza_agent/tools/: pizza_tools.py
streamlit/: app.py
streamlit/components/: __init__.py  chat_interface.py  sidebar.py
streamlit/pages/: 1_Architecture.py  2_Quick_Start.py  3_Restaurant_Guide.py
streamlit/utils/: __init__.py  api_client.py  session.py  styling.py
