[project]
name = "pizza-customerservice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects==2.0.0b1",
    "azure-identity>=1.25.2",
    "jsonref>=1.1.0",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]
